@@ -567,18 +567,20 @@ BEGIN
     LTEXT           "minutes",IDC_STATIC,132,33,25,8
 END
 
-IDD_COLLECTDIALOG DIALOG  0, 0, 316, 167
+IDD_COLLECTDIALOG DIALOGEX 0, 0, 316, 167
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Collection Manager"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,259,146,50,14
     CONTROL         "List1",201,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_EDITLABELS | WS_BORDER | WS_TABSTOP,7,7,240,153
     PUSHBUTTON      "&New",IDC_NEW,259,7,50,14
     PUSHBUTTON      "&Create From Selection",IDC_CREATEFROMSELECTION,259,25,50,21,BS_VCENTER | BS_MULTILINE
-    PUSHBUTTON      "&Delete",IDC_DELETE,259,79,50,14
-    PUSHBUTTON      "&Rename",IDC_RENAME,259,97,50,14
-    PUSHBUTTON      "&Edit",IDC_EDIT,259,60,50,14
+    PUSHBUTTON      "De&lete",IDC_DELETE,259,105,50,14
+    PUSHBUTTON      "&Rename",IDC_RENAME,259,123,50,14
+    PUSHBUTTON      "&Edit",IDC_EDIT,259,86,50,14
+    PUSHBUTTON      "&Up",IDC_COL_UP_BUTTON,259,50,50,14
+    PUSHBUTTON      "&Down",IDC_COL_DOWN_BUTTON,259,66,50,14
 END
 
 IDD_COLLECTION DIALOG  0, 0, 232, 231
